--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,9 @@ h5 {
    font-size: 3vh;
    line-height: 150%;
    letter-spacing: 3px;
-   margin: 15px;
+   margin-left: auto;
+   margin-right: auto;
+   width: 800px;
 
  }
 
@@ -1015,7 +1017,15 @@ footer p {
    .design {
      width: 80%;
    }
-
+   .design_process p {
+     font-family: 'Montserrat', sans-serif;
+   font-size: 16px;
+   line-height: 150%;
+   padding-top: 10px;
+   padding-bottom: 10px;
+   width: 300px;
+   text-align: left;
+   }
 
 
    /*contact me */
@@ -1105,11 +1115,12 @@ footer p {
 
 .design_process p {
   font-family: 'Montserrat', sans-serif;
-  font-size: 16px;
-  line-height: 150%;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  margin: 10px 10px;
+font-size: 16px;
+line-height: 150%;
+padding-top: 10px;
+padding-bottom: 10px;
+width: 300px;
+text-align: left;
 }
    /* navigation bar */
    .navbar {
