--- a/css/style.css
+++ b/css/style.css
@@ -609,7 +609,7 @@ h5 {
         }
 
 .aboutmemain  a:hover, a:active {
-  background-color: #ffd3c2;
+  background-color: #f9b0c7;
 }
 /* connect */
 .connect p {
