--- a/css/style.css
+++ b/css/style.css
@@ -6,38 +6,39 @@
 /* typography */
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Nunito', Arial, Helvetica, sans-serif;
 }
 
 h1{
-  font-family: 'Montserrat', serif;
+  font-family: 'Open Sans', Arial, Helvetica, sans-serif;
   font-weight: bold;
   font-size: 12vh;
-  margin-top: 200px;
+  margin-top: 100px;
 }
 
 h3 {
-     font-family: 'Montserrat', serif;
+     font-family: 'Nunito', Arial, Helvetica, sans-serif;
      font-weight: 900;
      font-size: 3vh;
      line-height: 167%;
 }
 
 h4 {
-  font-family: 'Montserrat', serif;
+  font-family: 'Nunito', Arial, Helvetica, sans-serif;
   font-size: 3vh;
   font-weight: bold;
 }
 
 h2 {
-  font-family: 'Montserrat', serif;
+  font-family: 'Nunito', Arial, Helvetica, sans-serif;
   font-size: 3vh;
   line-height: 150%;
   margin: 20px;
+  font-weight: 900;
 }
 
 h5 {
-  font-family: 'Montserrat', serif;
+  font-family: 'Nunito', Arial, Helvetica, sans-serif;
   font-size: 20px;
   font-weight: bold;
   line-height: 150%;
@@ -45,15 +46,15 @@ h5 {
 }
 /* navigation bar */
 .navbar {
-  background-color: #FFF2ED;
   list-style-type: none;
   margin: 0;
   overflow: hidden;
   position:fixed;
   padding: 0;
   width: 100%;
-  z-index: 1;
-  opacity: 0.7;
+  z-index: 2;
+  background-color: white;
+  text-decoration: none;
 }
 
 #logo  {
@@ -68,50 +69,50 @@ h5 {
   display: inline-block;
   float: right;
   margin: 30px 10px 20px 10px;
-  padding: 14px 20px;
+  padding: 10px 20px;
   text-align: center;
+  font-weight: bold;
   text-decoration: none;
 }
 
-.navbarlinks :hover, a:active {
-  background-color: #f9b0c7;
+.navbarlinks a:hover, a:active {
+  border-bottom: 3px solid #FFB2E0;
 }
 
 #contact_nav {
   display: inline-block;
-  border: 2px solid;
   color: black;
   float: right;
-  padding: 14px 25px;
+  padding: 10px 20px;
   margin: 30px 50px 20px 10px;
   text-align: center;
-  text-decoration: none;
 }
 
 /*hero */
+.welcome {
+  max-width: 800px;
+  text-align: left;
+  margin: 50px;
+}
+
 
 .hero {
-   background-color: #FFF2ED;
-   height: 800px;
-   text-align: center;
-   width: 100%;
- }
-
+ height: 700px;
+ text-align: center;
+ width: 100%;
+}
 
 
 .hero p {
-   font-family: 'Montserrat', sans-serif;
-   font-size: 3vh;
-   line-height: 150%;
-   margin-left: auto;
-   margin-right: auto;
-   margin-top: 20px;
-   max-width: 700px;
-
+  font-family: 'Nunito', Arial, Helvetica, sans-serif;
+  font-size: 4.5vh;
+  line-height: 160%;
+  margin-top: 20px;
+  text-align:left;
  }
 
-.fa-angle-double-down {
-   margin-top: 250px;
+.fa-angle-down {
+   margin-top: 100px;
  }
 
  #myBtn {
@@ -122,15 +123,15 @@ h5 {
    z-index: 99;
    border: none;
    outline: none;
-   background-color: #999;
+   background-color: black;
    color: white;
    cursor: pointer;
-   padding: 10px;
-   border-radius: 5px;
+   padding: 10px 15px;
+   border-radius: 50%;
  }
 
  #myBtn:hover {
-   background-color: #555;
+   background-color: #FFB2E0;
  }
 
 
@@ -143,7 +144,7 @@ h5 {
  }
 
 .main p {
- font-family: 'Montserrat', sans-serif;
+ font-family: 'Nunito', Arial, Helvetica, sans-serif;
  font-size: 20px;
  line-height: 180%;
  padding-top: 10px;
@@ -218,147 +219,10 @@ h5 {
    }
 
    .highlight {
-     background: linear-gradient(180deg,rgba(255,255,255,0) 50%, #f9b0c7 50%);
+     background: linear-gradient(180deg,rgba(255,255,255,0) 50%, #FFB2E0 50%);
    }
 
 /* end */
-
-/*slider*/
-.testimonials {
-      text-align: center;
-      margin-top: 30px;
-    }
-
-.slider {
-      height: 300px;
-      position: relative;
-      overflow: hidden;
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-flex-flow: row nowrap;
-      -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap;
-          -webkit-box-align: end;
-          -webkit-align-items: flex-end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-          -webkit-box-pack: center;
-          -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-        }
-.slider__nav {
-    width: 12px;
-    height: 12px;
-    margin: 2rem 12px;
-    border-radius: 50%;
-    z-index: 10;
-    outline: 6px solid gray;
-    outline-offset: -6px;
-    box-shadow: 0 0 0 0 #333, 0 0 0 0 rgba(51, 51, 51, 0);
-    cursor: pointer;
-    -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-          -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
-        }
-.slider__nav:checked {
-    -webkit-animation: check 0.4s linear forwards;
-          animation: check 0.4s linear forwards;
-}
-.slider__nav:checked:nth-of-type(1) ~ .slider__inner {
-    left: 0%;
-}
-.slider__nav:checked:nth-of-type(2) ~ .slider__inner {
-    left: -100%;
-}
-.slider__nav:checked:nth-of-type(3) ~ .slider__inner {
-    left: -200%;
-}
-.slider__nav:checked:nth-of-type(4) ~ .slider__inner {
-    left: -300%;
-}
-.slider__inner {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 400%;
-    height: 100%;
-    -webkit-transition: left 0.4s;
-    transition: left 0.4s;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-flow: row nowrap;
-      -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap;
-}
-.slider__contents {
-    height: 100%;
-    padding: 2rem;
-    text-align: center;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-          -webkit-flex-flow: column nowrap;
-      -ms-flex-flow: column nowrap;
-          flex-flow: column nowrap;
-          -webkit-box-align: center;
-          -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-          -webkit-box-pack: center;
-          -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-        }
-        .slider__image {
-          font-size: 2.7rem;
-          color: #2196F3;
-  }
-.slider__caption {
-    font-weight: 500;
-    margin: 2rem 0 1rem;
-    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-    text-transform: uppercase;
-  }
-.slider__txt {
-    color: #999;
-    line-height: 1.5;
-    margin-bottom: 5rem;
-    max-width: 300px;
-  }
-
-@-webkit-keyframes check {
-  50% {
-    outline-color: #333;
-    box-shadow: 0 0 0 12px #333, 0 0 0 36px rgba(51, 51, 51, 0.2);
-  }
-  100% {
-    outline-color: #333;
-    box-shadow: 0 0 0 0 #333, 0 0 0 0 rgba(51, 51, 51, 0);
-  }
-}
-
-@keyframes check {
-  50% {
-    outline-color: #333;
-    box-shadow: 0 0 0 12px #333, 0 0 0 36px rgba(51, 51, 51, 0.2);
-  }
-  100% {
-    outline-color: #333;
-    box-shadow: 0 0 0 0 #333, 0 0 0 0 rgba(51, 51, 51, 0);
-  }
-}
 
 
   /* case studies */
@@ -384,6 +248,21 @@ h5 {
     }
 
 
+
+.projecthero a:hover, a:active{
+   border: 2px solid white;
+   color: white;
+   background-color: black;
+   display: inline-block;
+   font-size: 18px;
+   padding: 14px 25px;
+   text-align: center;
+   text-decoration: none;
+   margin: 10px 60px;
+     }
+
+
+
 .projecthero p {
       padding: 5px;
       font-size: 2.5vh;
@@ -396,8 +275,7 @@ h5 {
 }
 
 .projectmain {
-      margin-top: 50px;
-      margin-bottom: 50px;
+
       margin-right: auto;
       margin-left: auto;
       max-width: 700px;
@@ -409,7 +287,7 @@ h5 {
       margin-left: auto;
       margin-right: auto;
       margin-top: 30px;
-      margin-bottom: 30px;
+      margin-bottom: 100px;
       width: 200px;
       color: black;
       font-size: 18px;
@@ -418,23 +296,47 @@ h5 {
       text-decoration: none;
     }
 
+
+
+.projectmain a:hover, a:active{
+  display: block;
+  border: 2px solid white;
+  color: white;
+  background-color: black;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  margin-bottom: 100px;
+  width: 200px;
+  font-size: 18px;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  }
+
 .projectmain p {
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Nunito', Arial, Helvetica, sans-serif;
       font-size: 20px;
       margin: 40px;
       line-height: 150%;
+      margin-top: 20px;
+      margin-bottom: 100px;
     }
 
 .projectmain img {
       display: block;
       margin-left: auto;
       margin-right: auto;
+      margin-bottom: 100px;
     }
 
 .project_content {
     margin: 60px;
 }
 
+.bold {
+  font-weight: 900;
+}
 
     /* busy bus project */
 .bususer {
@@ -554,15 +456,15 @@ h5 {
     }
 
 .aboutmemain p {
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Nunito', Arial, Helvetica, sans-serif;
       font-size: 20px;
       line-height: 167%;
       padding: 20px;
     }
 
 .aboutmemain blockquote {
-      background-color: #fff2ed;
-      height: 300px;
+      border-left: 4px solid #FFB2E0;
+      height: 200px;
       margin-left: 150px;
       margin-right: 150px;
       line-height: 167%;
@@ -609,18 +511,30 @@ h5 {
         }
 
 .aboutmemain  a:hover, a:active {
-  background-color: #f9b0c7;
+  display: block;
+  border: 2px solid white;
+  color: white;
+  background-color: black;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  width: 250px;
+  font-size: 18px;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
 }
 /* connect */
 .connect p {
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Nunito', Arial, Helvetica, sans-serif;
       font-size: 16px;
       line-height: 150%;
       padding: 10px 10px;
     }
 
 .footer p {
-     font-family: 'Montserrat', sans-serif;
+     font-family: 'Nunito', Arial, Helvetica, sans-serif;
      font-size: 12px;
      line-height: 150%;
      padding: 10px 10px;
@@ -643,7 +557,15 @@ h5 {
     }
 
 .connect  a:hover, a:active {
-  background-color: #f9b0c7;
+  border: 2px solid white;
+  color: white;
+  background-color: black;
+  display: inline-block;
+  font-size: 2vh;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  margin: 10px;
 }
 
 
@@ -659,7 +581,7 @@ h5 {
     }
 
     #contact {
-      background: #fff2ed;
+      background:  #FFB2E0;
       padding: 25px;
       box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
       margin-left: auto;
@@ -786,11 +708,11 @@ footer p {
       list-style-type: none;
       margin-top: 20px;
       margin-bottom: 20px;
-      padding: 25px;
+      padding: 35px;
     }
 
 .footer a:hover, a:active {
-      color: #f9b0c7;
+      color: #FFB2E0;
     }
 
 @media only screen and (max-width: 600px) {
@@ -809,7 +731,7 @@ footer p {
    }
 
    .fa-angle-double-down {
-     margin-top: 50px;
+     margin-top: 10px;
    }
 
 
@@ -834,8 +756,8 @@ footer p {
      text-decoration: none;
    }
 
-   .navbarlinks :hover, a:active {
-     background-color: #ffd3c2;
+   .navbarlinks a:hover, a:active {
+     border-bottom: 3px solid #FFB2E0;
    }
 
    .projects {
@@ -856,7 +778,7 @@ footer p {
   }
 
  .info_content p {
-   font-family: 'Montserrat', sans-serif;
+   font-family: 'Nunito', Arial, Helvetica, sans-serif;
    font-size: 16px;
    line-height: 150%;
    padding-top: 10px;
@@ -1022,8 +944,10 @@ footer p {
    .design {
      width: 80%;
    }
+
+
    .design_process p {
-     font-family: 'Montserrat', sans-serif;
+     font-family: 'Nunito', Arial, Helvetica, sans-serif;
    font-size: 16px;
    line-height: 150%;
    padding-top: 10px;
@@ -1037,7 +961,7 @@ footer p {
 
 
     #contact {
-      background: #fff2ed;
+      background:  #FFB2E0;
       padding: 25px;
       box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
       margin-left: auto;
@@ -1046,14 +970,14 @@ footer p {
     }
 
     .connect p {
-          font-family: 'Montserrat', sans-serif;
+          font-family: 'Nunito', Arial, Helvetica, sans-serif;
           font-size: 16px;
           line-height: 150%;
           padding: 10px 10px;
 
         }
 .footer p {
-          font-family: 'Montserrat', sans-serif;
+          font-family: 'Nunito', Arial, Helvetica, sans-serif;
           font-size: 12px;
           line-height: 150%;
           padding: 10px 10px;
@@ -1072,14 +996,14 @@ footer p {
 
   /* index page */
   .hero {
-     background-color: #FFF2ED;
+     background-color: white;
      height: 450px;
      text-align: center;
 
    }
 
    .fa-angle-double-down {
-     margin-top: 50px;
+     margin-top: 10px;
    }
 
 
@@ -1109,7 +1033,7 @@ footer p {
  }
 
 .info_content p {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Nunito', Arial, Helvetica, sans-serif;
   font-size: 16px;
   line-height: 150%;
   padding-top: 10px;
@@ -1119,7 +1043,7 @@ footer p {
 }
 
 .design_process p {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Nunito', Arial, Helvetica, sans-serif;
 font-size: 16px;
 line-height: 150%;
 padding-top: 10px;
@@ -1129,7 +1053,7 @@ text-align: left;
 }
    /* navigation bar */
    .navbar {
-     background-color: #FFF2ED;
+     background-color: white;
      list-style-type: none;
      margin: 0;
      overflow: hidden;
@@ -1178,12 +1102,9 @@ text-align: left;
      width: 7%;
    }
 
-
-.
-
  /* about me */
  h2 {
-   font-family: 'Playfair Display', serif;
+   font-family: 'Nunito', Arial, Helvetica, sans-serif;
    font-size: 4vh;
    line-height: 150%;
    margin: 20px;
@@ -1202,7 +1123,7 @@ text-align: left;
      margin-right: auto;
      line-height: 167%;
      padding: 20px;
-     background-color: #FFF2ED;
+     border-left: 4px solid #FFB2E0;
      width: 70%;
    }
 
@@ -1299,7 +1220,7 @@ text-align: left;
 
 
     #contact {
-      background: #fff2ed;
+      background:  #FFB2E0;
       padding: 25px;
       box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
       margin-left: auto;
@@ -1308,7 +1229,7 @@ text-align: left;
     }
 
 .connect p {
-          font-family: 'Montserrat', sans-serif;
+          font-family: 'Nunito', Arial, Helvetica, sans-serif;
           font-size: 16px;
           line-height: 150%;
           padding: 10px 10px;
@@ -1316,7 +1237,7 @@ text-align: left;
         }
 
 .footer p {
-          font-family: 'Montserrat', sans-serif;
+          font-family: 'Nunito', Arial, Helvetica, sans-serif;
           font-size: 12px;
           line-height: 150%;
           padding: 10px 10px;
