--- a/css/style.css
+++ b/css/style.css
@@ -487,6 +487,10 @@ h5 {
       margin-right: auto;
       width: 70%;
   }
+
+.wireframes {
+  color: light-gray;
+}
 /* medchat */
 
 .medchatmockup {
